# domain-errors

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  cleanup-guard.yml  dto-strict.yml  publish.yml  ruff.yml
docs/apps/: diagrams.md
domain_errors/: __init__.py  conftest.py
domain_errors/domains/: __init__.py
domain_errors/domains/botocore/: __init__.py  botocore.py
domain_errors/domains/domain_error/: domain_error.py
domain_errors/domains/http/: __init__.py  http.py
domain_errors/domains/http/tests/: test_http.py
domain_errors/domains/python/: __init__.py  python.py
domain_errors/domains/python/tests/: test_python.py
domain_errors/domains/tests/test_botocore/: conftest.py  test_botocore.py
domain_errors/domains/tests/test_domain_error/: test_domain_error.py
domain_errors/errors/: __init__.py
domain_errors/errors/chain/: __init__.py  chain.py
domain_errors/errors/domain_error/: domain_error.py
domain_errors/errors/domain_error/tests/: conftest.py  test_domain_error.py
domain_errors/services/chain/: __init__.py  chain.py  chain_client.py  chain_objects.py
domain_errors/services/chain/tests/: conftest.py  test_chain.py
domain_errors/services/constants/: chain.py
domain_errors/services/domain_error/: __init__.py  domain_error.py
domain_errors/services/tests/test_chain/: conftest.py  test_chain_client.py  test_chain_domain_of.py  test_chain_dtos.py  test_chain_objects.py
